--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@ body{margin:0;background-color:#132632;}
 .steps-title{position:absolute;top:3084px;left:calc(50% - 520px);transform:none;width:min(92vw, 920px);height:auto;opacity:1;display:block;font-family:'Clash Grotesk',system-ui,Segoe UI,Arial,sans-serif;font-weight:700;font-size:clamp(32px, 9vw, 92px);line-height:100%;letter-spacing:-0.02em;color:#86A6B0;z-index:5;white-space:nowrap;text-align:left;}
 .steps-title span{display:block;margin-top:12px;font-family:'Clash Grotesk',system-ui,Segoe UI,Arial,sans-serif;font-weight:700;font-size:clamp(32px, 9vw, 92px);line-height:100%;letter-spacing:-0.02em;color:#FFFFFF;white-space:nowrap;}
 .steps-desc{position:absolute;top:3120px;left:calc(50% + 320px);transform:none;width:min(40vw, 600px);opacity:1;font-family:'Outfit',system-ui,Segoe UI,Arial,sans-serif;font-weight:400;font-size:22px;line-height:140%;letter-spacing:0;color:#86A6B0;z-index:5;text-align:left;}
-.steps-actions{position:absolute;top:3410px;left:50%;transform:translateX(-50%);display:flex;gap:24px;z-index:5;}
-.steps-cards{position:absolute;top:3520px;left:50%;transform:translateX(-50%);display:flex;flex-direction:column;gap:10px;z-index:5;margin-left:-40px;}
+.steps-actions{position:absolute;top:3380px;left:50%;transform:translateX(-50%);display:flex;gap:24px;z-index:5;}
+.steps-cards{position:absolute;top:3480px;left:50%;transform:translateX(-50%);display:flex;flex-direction:column;gap:10px;z-index:5;margin-left:-40px;}
 .step-card{width:900px;height:180px;border-radius:16px;overflow:hidden;background:transparent;padding:0;}
 .step-card img{width:100%;height:100%;display:block;object-fit:contain;border-radius:16px;}
 .steps-cards .step-card:nth-child(2){margin-left:60px;width:860px;}
@@ -206,6 +206,15 @@ body{margin:0;background-color:#132632;}
   .frame-card.real-money-bottom,
   .frame-card.secure-trusted,
   .frame-card.instant-rewards{width:100%;}
+}
+
+/* Mobile overrides placed after defaults to ensure proper cascade */
+@media (max-width: 900px){
+  .steps-title{left:50%;transform:translateX(-50%);text-align:center;}
+  .steps-title span{margin-top:16px;}
+  .steps-desc{top:3170px;left:50%;transform:translateX(-50%);width:min(92vw, 480px);text-align:center;}
+  .steps-actions{top:3360px;left:50%;transform:translateX(-50%);} 
+  .steps-cards{top:3460px;left:50%;transform:translateX(-50%);margin-left:0;}
 }
 
 
