--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@ body{margin:0;background-color:#132632;}
   .phone{width:min(78vw,360px);top:640px;}
   .xmlid-shape{left:calc(50% - 860px);top:720px;width:900px;height:900px;}
   .bolt{left:calc(50% + 700px);top:760px;width:700px;height:700px;}
+  .hero-rewards{font-size:clamp(56px, 11vw, 110px);line-height:100%;}
 }
 
 @media (max-width: 480px){
@@ -129,6 +130,10 @@ body{margin:0;background-color:#132632;}
   .bolt{left:calc(50% + 660px);top:740px;width:660px;height:660px;}
   .steps-cards .step-card:nth-child(2){margin-left:14px;width:min(92vw, 860px);} 
   .steps-cards .step-card:nth-child(3){margin-left:28px;width:min(92vw, 900px);} 
+  .hero-title{font-size:clamp(16px, 4.5vw, 22px);} 
+  .hero-rewards{font-size:clamp(42px, 10vw, 76px);line-height:100%;}
+  .hero-subtitle{width:min(92vw, 720px);} 
+  .store-row{top:500px;}
 }
 
 .ellipse-bg{position:absolute;top:700px;left:-1400px;width:2800px;height:2800px;opacity:1;transform:rotate(0deg);background:#56BCDE;border-radius:50%;z-index:1;clip-path:inset(0 0 50% 0);}
