--- a/index.html
+++ b/index.html
@@ -213,6 +213,19 @@ body{margin:0;background-color:#132632;}
   .frame-card.instant-rewards{width:100%;height:auto;}
   .frame-card{height:auto;}
   .frame-card img{height:auto;object-fit:cover;}
+  .page{height:auto;overflow:visible;}
+  .seam-mask{display:none;}
+  .faq-section{position:relative;top:auto;height:auto;width:100vw;}
+  .faq-subtitle{width:min(92vw, 640px);}
+  .faq-arc-left,.faq-arc-right,.faq-right-arc{display:none;}
+  .frame-2095593392,
+  .frame-2095593395,
+  .frame-2095593394,
+  .frame-2095593406{position:relative;top:auto;left:50%;transform:translateX(-50%);width:min(92vw, 520px);height:auto;}
+  .frame-2095593392 img,
+  .frame-2095593395 img,
+  .frame-2095593394 img,
+  .frame-2095593406 img{width:100%;height:auto;object-fit:contain;}
 }
 
 @media (max-width: 900px){
