--- a/index.html
+++ b/index.html
@@ -213,6 +213,18 @@ body{margin:0;background-color:#132632;}
   .frame-card.instant-rewards{width:100%;height:auto;}
   .frame-card{height:auto;}
   .frame-card img{height:auto;object-fit:cover;}
+  .below-title{width:min(92vw, 520px);white-space:normal;}
+  .below-subtitle{width:min(92vw, 520px);}
+  .faq-title{width:min(92vw, 520px);white-space:normal;}
+  .faq-subtitle{width:min(92vw, 520px);}
+  .frame-2095593392,
+  .frame-2095593395,
+  .frame-2095593394,
+  .frame-2095593406{left:50%;transform:translateX(-50%);width:min(92vw, 520px);height:auto;}
+  .frame-2095593392 img,
+  .frame-2095593395 img,
+  .frame-2095593394 img,
+  .frame-2095593406 img{width:100%;height:auto;object-fit:contain;border-radius:24px;}
 }
 
 @media (max-width: 900px){
