--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 body{margin:0;background-color:#132632;}
 .page{--accent:#56BCDE;}
 .page{width:100vw;height:9500px;margin:0 auto;opacity:1;transform:rotate(0deg);position:relative;overflow:hidden;}
-.first-component{background-color:var(--accent);width:90%;max-width:1238px;height:74px;opacity:1;transform:translateX(-50%) rotate(0deg);position:absolute;top:28px;left:50%;border-radius:37px;} 
+.first-component{background-color:var(--accent);width:1238px;height:74px;opacity:1;transform:rotate(0deg);position:absolute;top:28px;left:calc(50% - 619px);border-radius:37px;} 
 .line-left{background-color:#56BCDE;height:3px;position:absolute;top:64px;left:0;width:calc(50% - 619px);} 
 .line-right{background-color:#56BCDE;height:3px;position:absolute;top:64px;left:calc(50% + 619px);width:calc(50% - 619px);} 
 
@@ -56,7 +56,7 @@ body{margin:0;background-color:#132632;}
 .frame-2095593395 img{width:100%;height:100%;display:block;object-fit:contain;}
 .frame-2095593394{position:absolute;top:6002px;left:0;width:100vw;height:801px;opacity:1;transform:rotate(0deg);border-radius:24px;overflow:hidden;z-index:4;}
 .frame-2095593394 img{width:100%;height:100%;display:block;object-fit:contain;}
-.frame-2095593406{position:absolute;top:7800px;left:50%;transform:translateX(-50%);width:min(100vw, 1920px);height:677px;opacity:1;rotate:0deg;border-radius:24px;overflow:hidden;z-index:6;}
+.frame-2095593406{position:absolute;top:7800px;left:0;width:100vw;height:677px;opacity:1;rotate:0deg;border-radius:24px;overflow:hidden;z-index:6;}
 .frame-2095593406 img{width:100%;height:100%;display:block;object-fit:contain;}
 
 .faq-section{position:absolute;top:6900px;left:0;width:100vw;height:820px;opacity:1;z-index:6;}
@@ -134,7 +134,6 @@ body{margin:0;background-color:#132632;}
   .hero-rewards{font-size:clamp(42px, 10vw, 76px);line-height:100%;}
   .hero-subtitle{width:min(92vw, 720px);} 
   .store-row{top:500px;}
-  .hero-title,.hero-rewards{white-space:normal;text-align:center;}
 }
 
 .ellipse-bg{position:absolute;top:700px;left:-1400px;width:2800px;height:2800px;opacity:1;transform:rotate(0deg);background:#56BCDE;border-radius:50%;z-index:1;clip-path:inset(0 0 50% 0);}
